--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <P>My name is karthik</P>
     <p>I am pursuing Btech(CSE) from VIIT</p>
     <a href="r.html">My daily routine</a>
+    <a href="z.html">college time table</a>
     <hr style="background-color: aquamarine;">
     <h1 style="background-color: #E57C23;">Social media accounts</h1>
     <a href="https://www.linkedin.com/in/karthik-chavali-4b099814b/"><img
