--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1 style="background-color: #E57C23;">INTRODUCTION</h1>
     <P>My name is karthik</P>
     <p>I am pursuing Btech(CSE) from VIIT</p>
-    <a href="r.html">My daily routine</a>
+    <a href="r.html">My daily routine</a><br>
     <a href="z.html">college time table</a>
     <hr style="background-color: aquamarine;">
     <h1 style="background-color: #E57C23;">Social media accounts</h1>
